[gd_scene load_steps=14 format=3 uid="uid://dsqjk8ggv547x"]

[ext_resource type="Script" path="res://pottery/CleaningTable.gd" id="1_avayf"]
[ext_resource type="Script" path="res://pottery/CursorArea.gd" id="2_018s2"]
[ext_resource type="Theme" uid="uid://ds00llpm4138j" path="res://theme/loading_screen.tres" id="3_dm5cm"]
[ext_resource type="Texture2D" uid="uid://cc8pmk1km76fw" path="res://art/desktop.jpg" id="3_g5nv7"]
[ext_resource type="Theme" uid="uid://dwad5m8etc8jg" path="res://theme/toolbox_theme.tres" id="4_smbbr"]
[ext_resource type="Script" path="res://pottery/ToolboxContainer.gd" id="5_02g13"]
[ext_resource type="Texture2D" uid="uid://din2bwl03yjl4" path="res://art/icon/new_item.png" id="6_ykwqm"]
[ext_resource type="Texture2D" uid="uid://c7pq1fo4eb4qh" path="res://art/icon/bump.png" id="8_20xbj"]
[ext_resource type="Texture2D" uid="uid://dpl0pib8s34xv" path="res://art/icon/rotate.png" id="9_t8akh"]
[ext_resource type="Texture2D" uid="uid://svocl7vr3n7r" path="res://art/icon/shuffle.png" id="10_03ju3"]
[ext_resource type="Texture2D" uid="uid://n7h30whidhfi" path="res://art/icon/glue_pot.png" id="10_6y6y3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tahv2"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wqvk2"]
size = Vector2(3272, 9187)

[node name="CleaningTable" type="Node2D"]
visibility_layer = 3
script = ExtResource("1_avayf")
camera_top_left_limit = Vector2(-400, -250)
metadata/_edit_vertical_guides_ = [4383.0, 3700.0, 2055.0]
metadata/_edit_horizontal_guides_ = [3199.0, 1523.0]

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -4096
offset_left = -353.0
offset_top = -109.0
offset_right = 4380.0
offset_bottom = 3198.0
texture = ExtResource("3_g5nv7")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2041, 1567)
zoom = Vector2(0.3, 0.3)
position_smoothing_enabled = true

[node name="Pieces" type="Node2D" parent="."]
visibility_layer = 3
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 130.0
offset_right = 1141.0
offset_bottom = 49.0
text = "camera=wasd or middle-click+drag, leftclick+drag=move piece, rightclick+drag=rotate piece, mouse wheel=zoom, shift=disable collisions while held
tab=toggle mouse mode
"

[node name="FadeRect" type="ColorRect" parent="CanvasLayer"]
visible = false
z_index = 4096
offset_left = -1093.0
offset_top = -390.0
offset_right = 5176.0
offset_bottom = 3396.0
color = Color(0, 0, 0, 1)

[node name="FadeLabel" type="Label" parent="CanvasLayer/FadeRect"]
layout_mode = 0
offset_left = 1094.0
offset_top = 591.0
offset_right = 2374.0
offset_bottom = 842.0
theme = ExtResource("3_dm5cm")
text = "Loading...."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ToolboxContainer" type="PanelContainer" parent="CanvasLayer"]
offset_left = 293.0
offset_top = 678.0
offset_right = 919.0
offset_bottom = 964.0
theme = ExtResource("4_smbbr")
script = ExtResource("5_02g13")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ToolboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 35

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ToolboxContainer/MarginContainer"]
layout_mode = 2

[node name="Tools" type="GridContainer" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 4

[node name="FreezeButton" type="Button" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
text = "bump
off"
icon = ExtResource("8_20xbj")
alignment = 0

[node name="LockRotateButton" type="Button" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
text = "rotate
off"
icon = ExtResource("9_t8akh")
alignment = 0

[node name="AddNewButton" type="Button" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
theme = ExtResource("4_smbbr")
text = "New
Item"
icon = ExtResource("6_ykwqm")
alignment = 0

[node name="ShuffleButton" type="Button" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
text = "shuffle"
icon = ExtResource("10_03ju3")
alignment = 0

[node name="GlueClear" type="Button" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
text = "glue
clear"
icon = ExtResource("10_6y6y3")
alignment = 0

[node name="GlueWhite" type="Button" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
text = "glue
white"
icon = ExtResource("10_6y6y3")
alignment = 0

[node name="GlueGold" type="Button" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools"]
self_modulate = Color(1, 0.858824, 0.0705882, 1)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
text = "glue
gold"
icon = ExtResource("10_6y6y3")
alignment = 0

[node name="GlueRed" type="Button" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools"]
self_modulate = Color(0.858824, 0, 0.0980392, 1)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
text = "glue
red"
icon = ExtResource("10_6y6y3")
alignment = 0

[node name="GlueGreen" type="Button" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools"]
self_modulate = Color(0.196078, 0.964706, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
text = "glue
green"
icon = ExtResource("10_6y6y3")
alignment = 0

[node name="GlueBlue" type="Button" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools"]
self_modulate = Color(0.0862745, 0.0431373, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
text = "glue
blue"
icon = ExtResource("10_6y6y3")
alignment = 0

[node name="GlueViolet" type="Button" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools"]
self_modulate = Color(0.764706, 0, 0.901961, 1)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
text = "glue
violet"
icon = ExtResource("10_6y6y3")
alignment = 0

[node name="GlueGreen3" type="Button" parent="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools"]
self_modulate = Color(0.270588, 0.266667, 0.27451, 1)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
text = "glue
black"
icon = ExtResource("10_6y6y3")
alignment = 0

[node name="CursorArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
input_pickable = false
script = ExtResource("2_018s2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CursorArea"]
shape = SubResource("CircleShape2D_tahv2")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-2007, 1513)
shape = SubResource("RectangleShape2D_wqvk2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(6021, 1425)
shape = SubResource("RectangleShape2D_wqvk2")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2040, -1737)
rotation = 1.5708
shape = SubResource("RectangleShape2D_wqvk2")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1913, 4837)
rotation = 1.5708
shape = SubResource("RectangleShape2D_wqvk2")

[connection signal="mouse_entered" from="CanvasLayer/ToolboxContainer" to="CanvasLayer/ToolboxContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ToolboxContainer" to="CanvasLayer/ToolboxContainer" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools/FreezeButton" to="." method="_on_freeze_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools/LockRotateButton" to="." method="_on_lock_rotate_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools/AddNewButton" to="." method="_on_add_new_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools/ShuffleButton" to="." method="_on_shuffle_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools/GlueClear" to="." method="_on_freeze_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools/GlueWhite" to="." method="_on_freeze_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools/GlueGold" to="." method="_on_freeze_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools/GlueRed" to="." method="_on_freeze_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools/GlueGreen" to="." method="_on_freeze_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools/GlueBlue" to="." method="_on_freeze_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools/GlueViolet" to="." method="_on_freeze_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ToolboxContainer/MarginContainer/VBoxContainer/Tools/GlueGreen3" to="." method="_on_freeze_button_pressed"]
[connection signal="body_entered" from="CursorArea" to="CursorArea" method="_on_body_entered"]
[connection signal="body_exited" from="CursorArea" to="CursorArea" method="_on_body_exited"]
